--- a/packages/edition-twig/package.json
+++ b/packages/edition-twig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pattern-lab/edition-twig",
+  "name": "@baskerhq/edition-twig",
   "version": "6.1.0",
   "description": "Pattern Lab node with Twig PHP Engine",
   "author": {
