--- a/packages/engine-twig/package.json
+++ b/packages/engine-twig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pattern-lab/engine-twig",
+  "name": "@baskerhq/engine-twig",
   "description": "The Twig engine for Pattern Lab / Node",
   "version": "6.1.0",
   "main": "lib/engine_twig.js",
