--- a/packages/plugin-tab/package.json
+++ b/packages/plugin-tab/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pattern-lab/plugin-tab",
+  "name": "@baskerhq/plugin-tab",
   "version": "6.1.0",
   "description": "",
   "main": "index.js",
