--- a/packages/uikit-workshop/package.json
+++ b/packages/uikit-workshop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pattern-lab/uikit-workshop",
+  "name": "@baskerhq/uikit-workshop",
   "version": "6.1.0",
   "description": "Front-end assets and templates for the default Pattern Lab workshop view",
   "main": "gulpfile.js",
