--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "bin": "index.js",
   "main": "index.js",
+  "private": "true",
   "scripts": {},
   "dependencies": {
     "@pattern-lab/cli": "^6.1.0"
@@ -13,7 +14,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "80f62be442223e09bafb30d0529cbd768e03f2ac",
+  "gitHead": "eb014f7b6348acd08ed3f07eb16b64bf11ea59ef",
   "engines": {
     "node": ">=16.20.0"
   }
