--- a/packages/starterkit-handlebars-demo/package.json
+++ b/packages/starterkit-handlebars-demo/package.json
@@ -32,5 +32,6 @@
     "@fontsource/abel": "^4.5.7",
     "@fontsource/raleway": "^4.5.11",
     "copyfiles": "^2.4.1"
-  }
+  },
+  "gitHead": "eb014f7b6348acd08ed3f07eb16b64bf11ea59ef"
 }
